syntax = "proto3";

import "Delta.proto";

// A message across a stream.
message StreamlitMsg {
  oneof type {
    string new_report = 1;
    DeltaList delta_list = 2;
  }
}
